src/objects/Cloud_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Customers</relationshipLabel>
        <relationshipName>Cloud_Customers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Id__c</fullName>
        <label>Cloud Id</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Compass_Id__c</fullName>
        <formula>TEXT(Account__r.Compass_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compass Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <description>Select the status of this customer on the Cloud Environment</description>
        <inlineHelpText>Select the status of this customer on the Cloud Environment</inlineHelpText>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Temp__c</fullName>
        <description>Account overall mood or temperature.</description>
        <inlineHelpText>Green = No issues
Yellow = Issues that can be mitigated
Red = Severe issues affecting relationship
Gray = Active customer not using environment
Black = Off-boarded customer</inlineHelpText>
        <label>Customer Temp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Pilot</fullName>
                </value>
                <value>
                    <fullName>Internal Customer</fullName>
                </value>
                <value>
                    <fullName>Internal Customer - Production</fullName>
                </value>
                <value>
                    <fullName>Partner Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates a customer that has renewed their agreement with us.</description>
        <inlineHelpText>This indicates a customer that has renewed their agreement with us.</inlineHelpText>
        <label>Has Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Word_Customer_Name__c</fullName>
        <description>This one word customer name will be used to customize the customer URL to deliver their environment.</description>
        <inlineHelpText>This one word customer name will be used to customize the customer URL to deliver their environment.</inlineHelpText>
        <label>One Word Customer Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <description>Date when service officially begins on the first contract with this customer</description>
        <inlineHelpText>Date when service officially begins on the first contract with this customer</inlineHelpText>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Cloud Customer</label>
    <listViews>
        <fullName>All_Active_Cloud_Customers</fullName>
        <columns>Account__c</columns>
        <columns>Customer_Type__c</columns>
        <columns>NAME</columns>
        <columns>Service_Start_Date__c</columns>
        <columns>Customer_Temp__c</columns>
        <columns>Cloud_Id__c</columns>
        <columns>Compass_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Cloud Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Cloud_Customers</fullName>
        <columns>Account__c</columns>
        <columns>Customer_Type__c</columns>
        <columns>NAME</columns>
        <columns>Customer_Status__c</columns>
        <columns>Service_Start_Date__c</columns>
        <columns>Customer_Temp__c</columns>
        <columns>Cloud_Id__c</columns>
        <columns>Compass_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cloud Customers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cloud Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>